st-backend-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotesbackend
spec:
  selector:
      matchLabels:
        name: quotesbackend
        quotesapp: backend
        version: v1
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: quotesbackend
        quotesapp: backend
        version: v1
    spec:
      containers:
      - name: quotes
        image: csaocpger/quotesbackendst:5
        ports:
          - containerPort: 3000
            name: http         
            protocol: TCP
