base-backend-infra.yaml
apiVersion: v1
kind: Service
metadata:
  name: quotesbackend
  labels:
    name: quotesbackend
    quotesapp: backend 
spec:
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  selector:
    quotesapp: backend
---
apiVersion: v1
kind: Service
metadata:
  name: quotesproxy
  labels:
    name: quotesproxy
    quotesapp: proxy
spec:
  type: ClusterIP
  selector:
    quotesapp: proxy
  ports:
   - port: 80
     name: http
     targetPort: 3000
     protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotesproxy
spec:
  selector:
      matchLabels:
        name: quotesproxy
        quotesapp: proxy
        version: v1
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: quotesproxy
        quotesapp: proxy
        version: v1
    spec:
      containers:
      - name: quotesproxy
        image: csaocpger/quotesproxy:1
        ports:
        - containerPort: 3000
          name: http         
          protocol: TCP
