ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: quotesbackend
  labels:
    quotesapp: quotesbackend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:3000;
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
spec:
  rules:
    - host: 52-143-30-72.nip.io
      http:
        paths:
          - path: /quotes
            backend:
                serviceName: quotesproxy
                servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: quotesfrontend
  labels:
    quotesapp: quotesfrontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:80;
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
spec:
  rules:
    - host: 52-143-30-72.nip.io
      http:
        paths:
          - path: /
            backend:
                serviceName: quotesfrontend
                servicePort: 80
